--- a/FrontEnd/src/app/property/property-card/property-card.component.css
+++ b/FrontEnd/src/app/property/property-card/property-card.component.css
@@ -1,6 +1,22 @@
 h1{
-    font-weight:normal;
+    font-weight: normal;
+    height:30px;
 }
-propImg{
-height: 250px;
+
+
+.card img
+{
+transform: scale(1,1);
+transition-duration: 500ms;
+transition-timing-function: ease-out;
+
+}
+.card:hover img{
+    transform:scale(1.2,1.2);
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+   opacity: .5;
+}
+.img-wrapper{
+    overflow: hidden;
 }
