--- a/FrontEnd/src/app/property/property-card/property-card.component.html
+++ b/FrontEnd/src/app/property/property-card/property-card.component.html
@@ -1,12 +1,20 @@
-<div class="row" style="width: 500px;height: 20px;">
-    <div class="shadow-lg col-sm-5 p-3">
-    <div class="card">
-        <img class="propImg" src="assets/images/home.jpg">
-        <div class="card-body p-2">
-            <h1>{{Property.Type}}</h1>
-            <h1>{{Property.Price}}</h1>
-            <h1>{{Property.Name}}</h1>
-        </div>
+<div class="card">
+    <div class="img-wrapper">
+        <img class="propImg card-img-top" src="assets/images/home.jpg">
+        <ul class="list-inline text-center">
+            <li class="list-inline-item">
+                <button class="btn btn-primary">E</button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-primary">C</button>
+            </li>
+        </ul>
     </div>
-</div>
+
+    <div class="card-body p-2">
+        <h1>{{property_name.Type}}</h1>
+        <h1>{{property_name.Price}}</h1>
+        <h1>{{property_name.Name}}</h1>
+        
+    </div>
 </div>
